// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SideBar Blocks render sidebar blocks on admin 0 1`] = `
<Fragment>
  <div
    className="section no-select"
    key="0"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate"
        />
        basic
      </span>
      <span
        className="title-dot basic"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Tell Alexa to play sounds or talk to the user"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-comment"
              />,
              "text": "Speak",
              "tip": "Tell Alexa to play sounds or talk to the user",
              "type": "speak",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Listen for the user to make a choice from a list of options you set"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-project-diagram"
              />,
              "text": "Choice",
              "tip": "Listen for the user to make a choice from a list of options you set",
              "type": "choice",
            }
          }
          key="1"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="1"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        logic
      </span>
      <span
        className="title-dot logic"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Set the value of a variable, or many variables at once"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-code"
              />,
              "text": "Set",
              "tip": "Set the value of a variable, or many variables at once",
              "type": "set",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Set conditions that activate paths only when true"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-code-branch"
              />,
              "text": "If",
              "tip": "Set conditions that activate paths only when true",
              "type": "if",
            }
          }
          key="1"
        />
        <Connect(MenuItem)
          data-tip="Capture what the user says into a variable"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-microphone"
              />,
              "text": "Capture",
              "tip": "Capture what the user says into a variable",
              "type": "capture",
            }
          }
          key="2"
        />
        <Connect(MenuItem)
          data-tip="Choose randomly from a set number of paths"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-random"
              />,
              "text": "Random",
              "tip": "Choose randomly from a set number of paths",
              "type": "random",
            }
          }
          key="3"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="2"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        advanced
      </span>
      <span
        className="title-dot advanced"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Select choices and capture slot values from user input"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-user-alt"
              />,
              "text": "Interaction",
              "tip": "Select choices and capture slot values from user input",
              "type": "interaction",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Handle intents, from within the skill and upon skill launch with CanFulfillIntent"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-step-forward"
              />,
              "text": "Intent",
              "tip": "Handle intents, from within the skill and upon skill launch with CanFulfillIntent",
              "type": "intent",
            }
          }
          key="1"
        />
        <Connect(MenuItem)
          data-tip="Stream long audio files & URLs for the user"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-play"
              />,
              "text": "Stream",
              "tip": "Stream long audio files & URLs for the user",
              "type": "stream",
            }
          }
          key="2"
        />
        <Connect(MenuItem)
          data-tip="Use external APIs and store responses into variables"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-globe"
              />,
              "text": "API",
              "tip": "Use external APIs and store responses into variables",
              "type": "api",
            }
          }
          key="3"
        />
        <Connect(MenuItem)
          data-tip="Organize your project into manageable sections or perform computations"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-clone"
              />,
              "text": "Flow",
              "tip": "Organize your project into manageable sections or perform computations",
              "type": "flow",
            }
          }
          key="4"
        />
        <Connect(MenuItem)
          data-tip="Modify Variables directly with Code"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fab fa-js-square"
              />,
              "text": "Code",
              "tip": "Modify Variables directly with Code",
              "type": "code",
            }
          }
          key="5"
        />
        <Connect(MenuItem)
          data-tip="End the skill on the current flow"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-sign-out"
              />,
              "text": "Exit",
              "tip": "End the skill on the current flow",
              "type": "exit",
            }
          }
          key="6"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="3"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        visuals
      </span>
      <span
        className="title-dot visuals"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Tell Alexa to show a card"
          draggable={true}
          item={
            Object {
              "icon": <i
                class="fas fa-poll-h"
              />,
              "text": "Card",
              "tip": "Tell Alexa to show a card",
              "type": "card",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Show a Multimodal Display on the screen using APL"
          draggable={true}
          item={
            Object {
              "icon": <i
                class="fas fa-image"
              />,
              "text": "Display",
              "tip": "Show a Multimodal Display on the screen using APL",
              "type": "display",
            }
          }
          key="1"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="4"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        business
      </span>
      <span
        className="title-dot business"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="premium-block"
      >
        <div>
          <span>
            Upgrade to access these premium features
          </span>
          <Link
            className="btn-primary mt-3 d-block no-underline"
            replace={false}
            to="/account/upgrade"
          >
            Upgrade
          </Link>
        </div>
      </div>
      <div
        className="mb-3 section-blocks"
        style={
          Object {
            "opacity": 0.3,
          }
        }
      >
        <Connect(MenuItem)
          data-tip="Ask users to enable permissions (User Info, Reminders, etc.)"
          draggable={false}
          item={
            Object {
              "icon": <i
                className="fas fa-lock"
              />,
              "text": "Permission",
              "tip": "Ask users to enable permissions (User Info, Reminders, etc.)",
              "type": "permission",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Get User Information and check Permissions"
          draggable={false}
          item={
            Object {
              "icon": <i
                className="fas fa-user"
              />,
              "text": "User Info",
              "tip": "Get User Information and check Permissions",
              "type": "permissions",
            }
          }
          key="1"
        />
        <Connect(MenuItem)
          data-tip="Send Emails via SendGrid"
          draggable={false}
          item={
            Object {
              "icon": <i
                className="fas fa-envelope"
              />,
              "text": "Mail",
              "tip": "Send Emails via SendGrid",
              "type": "mail",
            }
          }
          key="2"
        />
        <Connect(MenuItem)
          data-tip="Request payment from user"
          draggable={false}
          item={
            Object {
              "icon": <i
                className="fas fa-dollar-sign"
              />,
              "text": "Payment",
              "tip": "Request payment from user",
              "type": "payment",
            }
          }
          key="3"
        />
        <Connect(MenuItem)
          data-tip="Refund a purchase or cancel an user's subscription"
          draggable={false}
          item={
            Object {
              "icon": <i
                className="fas fa-user-minus"
              />,
              "text": "Cancel Payment",
              "tip": "Refund a purchase or cancel an user's subscription",
              "type": "cancel",
            }
          }
          key="4"
        />
        <Connect(MenuItem)
          data-tip="Send a remind to the user in a set amount of time"
          draggable={false}
          item={
            Object {
              "icon": <i
                className="fas fa-bell"
              />,
              "text": "Reminder",
              "tip": "Send a remind to the user in a set amount of time",
              "type": "reminder",
            }
          }
          key="5"
        />
      </div>
    </Collapse>
  </div>
</Fragment>
`;

exports[`SideBar Blocks render sidebar blocks on admin 100 1`] = `
<Fragment>
  <div
    className="section no-select"
    key="0"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate"
        />
        basic
      </span>
      <span
        className="title-dot basic"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={true}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Tell Alexa to play sounds or talk to the user"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-comment"
              />,
              "text": "Speak",
              "tip": "Tell Alexa to play sounds or talk to the user",
              "type": "speak",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Listen for the user to make a choice from a list of options you set"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-project-diagram"
              />,
              "text": "Choice",
              "tip": "Listen for the user to make a choice from a list of options you set",
              "type": "choice",
            }
          }
          key="1"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="1"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        logic
      </span>
      <span
        className="title-dot logic"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Set the value of a variable, or many variables at once"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-code"
              />,
              "text": "Set",
              "tip": "Set the value of a variable, or many variables at once",
              "type": "set",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Set conditions that activate paths only when true"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-code-branch"
              />,
              "text": "If",
              "tip": "Set conditions that activate paths only when true",
              "type": "if",
            }
          }
          key="1"
        />
        <Connect(MenuItem)
          data-tip="Capture what the user says into a variable"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-microphone"
              />,
              "text": "Capture",
              "tip": "Capture what the user says into a variable",
              "type": "capture",
            }
          }
          key="2"
        />
        <Connect(MenuItem)
          data-tip="Choose randomly from a set number of paths"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-random"
              />,
              "text": "Random",
              "tip": "Choose randomly from a set number of paths",
              "type": "random",
            }
          }
          key="3"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="2"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        advanced
      </span>
      <span
        className="title-dot advanced"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Select choices and capture slot values from user input"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-user-alt"
              />,
              "text": "Interaction",
              "tip": "Select choices and capture slot values from user input",
              "type": "interaction",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Handle intents, from within the skill and upon skill launch with CanFulfillIntent"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-step-forward"
              />,
              "text": "Intent",
              "tip": "Handle intents, from within the skill and upon skill launch with CanFulfillIntent",
              "type": "intent",
            }
          }
          key="1"
        />
        <Connect(MenuItem)
          data-tip="Stream long audio files & URLs for the user"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-play"
              />,
              "text": "Stream",
              "tip": "Stream long audio files & URLs for the user",
              "type": "stream",
            }
          }
          key="2"
        />
        <Connect(MenuItem)
          data-tip="Use external APIs and store responses into variables"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-globe"
              />,
              "text": "API",
              "tip": "Use external APIs and store responses into variables",
              "type": "api",
            }
          }
          key="3"
        />
        <Connect(MenuItem)
          data-tip="Organize your project into manageable sections or perform computations"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-clone"
              />,
              "text": "Flow",
              "tip": "Organize your project into manageable sections or perform computations",
              "type": "flow",
            }
          }
          key="4"
        />
        <Connect(MenuItem)
          data-tip="Modify Variables directly with Code"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fab fa-js-square"
              />,
              "text": "Code",
              "tip": "Modify Variables directly with Code",
              "type": "code",
            }
          }
          key="5"
        />
        <Connect(MenuItem)
          data-tip="End the skill on the current flow"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-sign-out"
              />,
              "text": "Exit",
              "tip": "End the skill on the current flow",
              "type": "exit",
            }
          }
          key="6"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="3"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        visuals
      </span>
      <span
        className="title-dot visuals"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Tell Alexa to show a card"
          draggable={true}
          item={
            Object {
              "icon": <i
                class="fas fa-poll-h"
              />,
              "text": "Card",
              "tip": "Tell Alexa to show a card",
              "type": "card",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Show a Multimodal Display on the screen using APL"
          draggable={true}
          item={
            Object {
              "icon": <i
                class="fas fa-image"
              />,
              "text": "Display",
              "tip": "Show a Multimodal Display on the screen using APL",
              "type": "display",
            }
          }
          key="1"
        />
      </div>
    </Collapse>
  </div>
  <div
    className="section no-select"
    key="4"
  >
    <div
      className="section-title"
      onClick={[Function]}
    >
      <span>
        <i
          className="fas fa-caret-down mr-1 rotate fa-rotate--90"
        />
        business
      </span>
      <span
        className="title-dot business"
      />
    </div>
    <Collapse
      appear={false}
      enter={true}
      exit={true}
      in={false}
      isOpen={false}
      mountOnEnter={false}
      onEnter={[Function]}
      onEntered={[Function]}
      onEntering={[Function]}
      onExit={[Function]}
      onExited={[Function]}
      onExiting={[Function]}
      tag="div"
      timeout={350}
      unmountOnExit={false}
    >
      <div
        className="mb-3 section-blocks"
        style={null}
      >
        <Connect(MenuItem)
          data-tip="Ask users to enable permissions (User Info, Reminders, etc.)"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-lock"
              />,
              "text": "Permission",
              "tip": "Ask users to enable permissions (User Info, Reminders, etc.)",
              "type": "permission",
            }
          }
          key="0"
        />
        <Connect(MenuItem)
          data-tip="Get User Information and check Permissions"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-user"
              />,
              "text": "User Info",
              "tip": "Get User Information and check Permissions",
              "type": "permissions",
            }
          }
          key="1"
        />
        <Connect(MenuItem)
          data-tip="Send Emails via SendGrid"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-envelope"
              />,
              "text": "Mail",
              "tip": "Send Emails via SendGrid",
              "type": "mail",
            }
          }
          key="2"
        />
        <Connect(MenuItem)
          data-tip="Request payment from user"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-dollar-sign"
              />,
              "text": "Payment",
              "tip": "Request payment from user",
              "type": "payment",
            }
          }
          key="3"
        />
        <Connect(MenuItem)
          data-tip="Refund a purchase or cancel an user's subscription"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-user-minus"
              />,
              "text": "Cancel Payment",
              "tip": "Refund a purchase or cancel an user's subscription",
              "type": "cancel",
            }
          }
          key="4"
        />
        <Connect(MenuItem)
          data-tip="Send a remind to the user in a set amount of time"
          draggable={true}
          item={
            Object {
              "icon": <i
                className="fas fa-bell"
              />,
              "text": "Reminder",
              "tip": "Send a remind to the user in a set amount of time",
              "type": "reminder",
            }
          }
          key="5"
        />
      </div>
    </Collapse>
  </div>
</Fragment>
`;
